--- a/src/app/@ansyn/imagery/tsconfig.lib.json
+++ b/src/app/@ansyn/imagery/tsconfig.lib.json
@@ -1,9 +1,6 @@
 {
-  "extends": "../../../tsconfig.json",
+  "extends": "../../../../tsconfig.json",
   "compilerOptions": {
-    "paths": {
-
-    },
     "outDir": "../../../out-tsc/lib",
     "target": "es2015",
     "module": "es2015",
@@ -15,12 +12,14 @@
     "experimentalDecorators": true,
     "importHelpers": true,
     "types": [],
-    "lib": [
-      "es2017",
-      "es2017.object",
-      "es2016.array.include",
-      "dom"
-    ]
+    "paths": {
+      "@ansyn/core": [
+        "./dist/ansyn/core"
+      ],
+      "@ansyn/core/*": [
+        "./dist/ansyn/core/*"
+      ]
+    }
   },
   "angularCompilerOptions": {
     "annotateForClosureCompiler": true,
