--- a/src/app/@ansyn/map-facade/tsconfig.lib.json
+++ b/src/app/@ansyn/map-facade/tsconfig.lib.json
@@ -1,6 +1,20 @@
 {
-  "extends": "../../../tsconfig.json",
+  "extends": "../../../../tsconfig.json",
   "compilerOptions": {
+    "paths": {
+      "@ansyn/core": [
+        "dist/ansyn/core"
+      ],
+      "@ansyn/core/*": [
+        "dist/ansyn/core/*"
+      ],
+      "@ansyn/imagery": [
+        "dist/ansyn/imagery"
+      ],
+      "@ansyn/imagery/*": [
+        "dist/ansyn/imagery/*"
+      ]
+    },
     "outDir": "../../../out-tsc/lib",
     "target": "es2015",
     "module": "es2015",
@@ -12,14 +26,12 @@
     "experimentalDecorators": true,
     "importHelpers": true,
     "types": [],
-    "paths": {
-      "@ansyn/core": [
-        "./dist/ansyn/core"
-      ],
-      "@ansyn/core/*": [
-        "./dist/ansyn/core/*"
-      ]
-    }
+    "lib": [
+      "es2017",
+      "es2017.object",
+      "es2016.array.include",
+      "dom"
+    ]
   },
   "angularCompilerOptions": {
     "annotateForClosureCompiler": true,
