--- a/src/app/@ansyn/menu-items/tsconfig.lib.json
+++ b/src/app/@ansyn/menu-items/tsconfig.lib.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../../tsconfig.json",
+  "extends": "../../../../tsconfig.json",
   "compilerOptions": {
     "paths": {
       "@ansyn/core": [
@@ -8,47 +8,11 @@
       "@ansyn/core/*": [
         "dist/ansyn/core/*"
       ],
-      "@ansyn/menu-items": [
-        "dist/ansyn/menu-items"
-      ],
-      "@ansyn/menu-items/*": [
-        "dist/ansyn/menu-items/*"
-      ],
-      "@ansyn/menu": [
-        "dist/ansyn/menu"
-      ],
       "@ansyn/menu/*": [
         "dist/ansyn/menu/*"
       ],
-      "@ansyn/map-facade": [
-        "dist/ansyn/map-facade"
-      ],
-      "@ansyn/map-facade/*": [
-        "dist/ansyn/map-facade/*"
-      ],
-      "@ansyn/status-bar": [
-        "dist/ansyn/status-bar"
-      ],
-      "@ansyn/status-bar/*": [
-        "dist/ansyn/status-bar/*"
-      ],
-      "@ansyn/imagery": [
-        "dist/ansyn/imagery"
-      ],
-      "@ansyn/imagery/*": [
-        "dist/ansyn/imagery/*"
-      ],
-      "@ansyn/plugins": [
-        "dist/ansyn/plugins"
-      ],
-      "@ansyn/plugins/*": [
-        "dist/ansyn/plugins/*"
-      ],
-      "@ansyn/overlays": [
-        "dist/ansyn/overlays"
-      ],
-      "@ansyn/overlays/*": [
-        "dist/ansyn/overlays/*"
+      "@ansyn/menu-items/*": [
+        "src/app/@ansyn/menu-items/*"
       ],
       "@ansyn/context": [
         "dist/ansyn/context"
