--- a/src/app/@ansyn/menu/tsconfig.lib.json
+++ b/src/app/@ansyn/menu/tsconfig.lib.json
@@ -1,14 +1,6 @@
 {
-  "extends": "../../../tsconfig.json",
+  "extends": "../../../../tsconfig.json",
   "compilerOptions": {
-    "paths": {
-      "@ansyn/core": [
-        "dist/ansyn/core"
-      ],
-      "@ansyn/core/*": [
-        "dist/ansyn/core/*"
-      ]
-    },
     "outDir": "../../../out-tsc/lib",
     "target": "es2015",
     "module": "es2015",
@@ -20,12 +12,11 @@
     "experimentalDecorators": true,
     "importHelpers": true,
     "types": [],
-    "lib": [
-      "es2017",
-      "es2017.object",
-      "es2016.array.include",
-      "dom"
-    ]
+    "paths": {
+      "@ansyn/menu/*": [
+        "src/app/@ansyn/menu/*"
+      ]
+    }
   },
   "angularCompilerOptions": {
     "annotateForClosureCompiler": true,
