--- a/src/app/@ansyn/status-bar/package.json
+++ b/src/app/@ansyn/status-bar/package.json
@@ -1,17 +1,8 @@
 {
-	"name": "@ansyn/status-bar",
-	"version": "0.2.81",
-	"description": "status-bar",
-	"main": "index.ts",
-	"scripts": {
-		"test": "npm test"
-	},
-	"author": "",
-	"license": "MIT",
-	"peerDependencies": {
-		"@angular/core": "^6.0.3",
-		"@angular/common": "^6.0.3",
-		"@ansyn/core": "0.2.81"
-	},
-	"typings": "index.d.ts"
+  "name": "@ansyn/status-bar",
+  "version": "0.0.1",
+  "peerDependencies": {
+    "@angular/common": "^6.0.0-rc.0 || ^6.0.0",
+    "@angular/core": "^6.0.0-rc.0 || ^6.0.0"
+  }
 }
