--- a/src/app/@ansyn/core/tsconfig.lib.json
+++ b/src/app/@ansyn/core/tsconfig.lib.json
@@ -1,13 +1,7 @@
 {
-  "extends": "../../../tsconfig.json",
+  "extends": "../../../../tsconfig.json",
   "compilerOptions": {
     "paths": {
-      "@ansyn/core": [
-        "dist/ansyn/core"
-      ],
-      "@ansyn/core/*": [
-        "dist/ansyn/core/*"
-      ]
     },
     "outDir": "../../../out-tsc/lib",
     "target": "es2015",
