--- a/src/app/@ansyn/map-facade/package.json
+++ b/src/app/@ansyn/map-facade/package.json
@@ -1,21 +1,8 @@
 {
-	"name": "@ansyn/map-facade",
-	"version": "0.2.81",
-	"description": "",
-	"main": "index.js",
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "MIT",
-	"peerDependencies": {
-		"@angular/common": "^6.0.3",
-		"@angular/core": "^6.0.3",
-		"@ansyn/core": "0.2.81",
-		"@ngrx/effects": "^6.0.1",
-		"@ngrx/core": "^1.2.0",
-		"@ngrx/store": "^6.0.1"
-	},
-	"typings": "index.d.ts"
+  "name": "@ansyn/map-facade",
+  "version": "0.0.1",
+  "peerDependencies": {
+    "@angular/common": "^6.0.0-rc.0 || ^6.0.0",
+    "@angular/core": "^6.0.0-rc.0 || ^6.0.0"
+  }
 }
