--- a/src/app/@ansyn/plugins/tsconfig.lib.json
+++ b/src/app/@ansyn/plugins/tsconfig.lib.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../../tsconfig.json",
+  "extends": "../../../../tsconfig.json",
   "compilerOptions": {
     "paths": {
       "@ansyn/core": [
@@ -7,6 +7,42 @@
       ],
       "@ansyn/core/*": [
         "dist/ansyn/core/*"
+      ],
+      "@ansyn/menu-items": [
+        "dist/ansyn/menu-items"
+      ],
+      "@ansyn/menu-items/*": [
+        "dist/ansyn/menu-items/*"
+      ],
+      "@ansyn/map-facade": [
+        "dist/ansyn/map-facade"
+      ],
+      "@ansyn/map-facade/*": [
+        "dist/ansyn/map-facade/*"
+      ],
+      "@ansyn/status-bar": [
+        "dist/ansyn/status-bar"
+      ],
+      "@ansyn/status-bar/*": [
+        "dist/ansyn/status-bar/*"
+      ],
+      "@ansyn/imagery": [
+        "dist/ansyn/imagery"
+      ],
+      "@ansyn/imagery/*": [
+        "dist/ansyn/imagery/*"
+      ],
+      "@ansyn/context": [
+        "dist/ansyn/context"
+      ],
+      "@ansyn/context/*": [
+        "dist/ansyn/context/*"
+      ],
+      "@ansyn/overlays": [
+        "dist/ansyn/overlays"
+      ],
+      "@ansyn/overlays/*": [
+        "dist/ansyn/overlays/*"
       ]
     },
     "outDir": "../../../out-tsc/lib",
