--- a/src/app/@ansyn/status-bar/tsconfig.lib.json
+++ b/src/app/@ansyn/status-bar/tsconfig.lib.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../../../tsconfig.json",
+  "extends": "../../../../tsconfig.json",
   "compilerOptions": {
     "paths": {
       "@ansyn/core": [
@@ -7,12 +7,6 @@
       ],
       "@ansyn/core/*": [
         "dist/ansyn/core/*"
-      ],
-      "@ansyn/imagery": [
-        "dist/ansyn/imagery"
-      ],
-      "@ansyn/imagery/*": [
-        "dist/ansyn/imagery/*"
       ]
     },
     "outDir": "../../../out-tsc/lib",
