--- a/src/app/@ansyn/ansyn/package.json
+++ b/src/app/@ansyn/ansyn/package.json
@@ -14,7 +14,52 @@
 		"@ansyn/menu-items": "0.2.81.4",
 		"@ansyn/overlays": "0.2.81.4",
 		"@ansyn/plugins": "0.2.81.4",
-		"@ansyn/status-bar": "0.2.81.4"
-	},
+		"@ansyn/status-bar": "0.2.81.4",
+
+
+
+
+
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/effects": "^6.1.0",
+    "@ngrx/entity": "^6.1.0",
+    "@ngrx/store": "^6.1.0",
+    "@ansyn/event-drops": "^1.0.2",
+    "@ngrx/store-devtools": "^6.0.1",
+    "@ngx-translate/core": "^10.0.2",
+    "@ngx-translate/http-loader": "^3.0.1",
+    "@turf/turf": "5.1.6",
+    "@types/openlayers": "^4.6.2",
+    "angular2-uuid": "1.1.1",
+    "auto-subscriptions": "^1.0.3",
+    "crypto-js": "3.1.9-1",
+    "d3": "^4.13.0",
+    "debounce": "1.0.0",
+    "enhanced-resolve": "3.3.0",
+    "file-saver": "^1.3.8",
+    "flatpickr": "4.1.2",
+    "font-awesome": "^4.7.0",
+    "geojson": "^0.5.0",
+    "lodash": "4.17.5",
+    "lodash-decorators": "4.5.0",
+    "moment": "^2.21.0",
+    "ng-infinitescroll": "1.0.12",
+    "ngx-bootstrap": "^2.0.4",
+    "ngx-treeview": "^2.0.6",
+    "ol": "4.6.3",
+    "primeng": "4.1.3",
+    "proj4": "2.4.3",
+    "reselect": "3.0.0",
+    "rison": "0.1.1",
+    "togeojson": "^0.16.0",
+    "tokml": "^0.4.0",
+    "wellknown": "0.5.0"
+
+
+
+
+
+
+  },
 	"license": "MIT"
 }
