--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,34 +4,7 @@
     "baseUrl": "./",
     "paths": {
       "@ansyn/*": [
-        "src/app/@ansyn/*"
-      ],
-      "@ansyn/core": [
-        "src/app/@ansyn/core/public_api"
-      ],
-      "@ansyn/context": [
-        "src/app/@ansyn/context/public_api"
-      ],
-      "@ansyn/imagery": [
-        "src/app/@ansyn/imagery/public_api"
-      ],
-      "@ansyn/map-facade": [
-        "src/app/@ansyn/map-facade/public_api"
-      ],
-      "@ansyn/plugins": [
-        "src/app/@ansyn/plugins/public_api"
-      ],
-      "@ansyn/menu": [
-        "src/app/@ansyn/menu/public_api"
-      ],
-      "@ansyn/menu-items": [
-        "src/app/@ansyn/menu-items/public_api"
-      ],
-      "@ansyn/status-bar": [
-        "src/app/@ansyn/status-bar/public_api"
-      ],
-      "@ansyn/overlays": [
-        "src/app/@ansyn/overlays/public_api"
+        "src/app/@ansyn/*/public_api"
       ],
       "@ansyn/event-drops": [
         "node_modules/@ansyn/event-drops"
