--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "ng-infinitescroll": "1.0.12",
     "ngx-bootstrap": "^2.0.4",
     "ngx-treeview": "^2.0.6",
+    "npm": "^6.4.1",
     "ol": "4.6.3",
     "primeng": "4.1.3",
     "proj4": "2.4.3",
