--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,7 @@
               "src/favicon.ico"
             ],
             "styles": [
-              "src/app/@ansyn/assets/styles/styles.less"
+              "src/app/@ansyn/assets/styles/styles.css"
             ],
             "stylePreprocessorOptions": {
               "includePaths": [
@@ -102,7 +102,7 @@
             "tsConfig": "src/tsconfig.spec.json",
             "scripts": [],
             "styles": [
-              "src/app/@ansyn/assets/styles/styles.less"
+              "src/app/@ansyn/assets/styles/styles.css"
             ],
             "stylePreprocessorOptions": {
               "includePaths": [
@@ -186,7 +186,7 @@
               "src/favicon.ico"
             ],
             "styles": [
-              "src/app/@ansyn/assets/styles/styles.less"
+              "src/app/@ansyn/assets/styles/styles.css"
             ],
             "scripts": []
           },
@@ -247,7 +247,7 @@
             "tsConfig": "src/tsconfig.spec.json",
             "scripts": [],
             "styles": [
-              "src/app/@ansyn/assets/styles/styles.less"
+              "src/app/@ansyn/assets/styles/styles.css"
             ],
             "assets": [
               {
@@ -301,7 +301,7 @@
               "src/favicon.ico"
             ],
             "styles": [
-              "src/app/@ansyn/assets/styles/styles.less"
+              "src/app/@ansyn/assets/styles/styles.css"
             ],
             "scripts": []
           },
@@ -362,7 +362,7 @@
             "tsConfig": "src/tsconfig.spec.json",
             "scripts": [],
             "styles": [
-              "src/app/@ansyn/assets/styles/styles.less"
+              "src/app/@ansyn/assets/styles/styles.css"
             ],
             "assets": [
               {
