--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ before_script:
   #- apt-get install graphicsmagick # for e2e screenshots
 
 script:
+  - npm run lint
   - npm run test:single-run
   - npm run test:e2e
   - npm run build:libs
