--- a/src/app/@ansyn/menu-items/tsconfig.json
+++ b/src/app/@ansyn/menu-items/tsconfig.json
@@ -3,13 +3,13 @@
   "compilerOptions": {
     "paths": {
       "@ansyn/core": [
-        "src/app/@ansyn/core/public_api"
+        "src/app/@ansyn/core"
       ],
       "@ansyn/context": [
-        "src/app/@ansyn/context/public_api"
+        "src/app/@ansyn/context"
       ],
       "@ansyn/menu": [
-        "src/app/@ansyn/menu/public_api"
+        "src/app/@ansyn/menu"
       ]
     }
   }
