remove all index.ts files

--- a/src/app/@ansyn/ansyn/tsconfig.json
+++ b/src/app/@ansyn/ansyn/tsconfig.json
@@ -1,5 +1,34 @@
 {
   "extends": "../../../../tsconfig.json",
   "compilerOptions": {
+    "paths": {
+      "@ansyn/core": [
+        "src/app/@ansyn/core/public_api"
+      ],
+      "@ansyn/imagery": [
+        "src/app/@ansyn/imagery/public_api"
+      ],
+      "@ansyn/menu-items": [
+        "src/app/@ansyn/menu-items/public_api"
+      ],
+      "@ansyn/map-facade": [
+        "src/app/@ansyn/map-facade/public_api"
+      ],
+      "@ansyn/plugins": [
+        "src/app/@ansyn/plugins/public_api"
+      ],
+      "@ansyn/overlays": [
+        "src/app/@ansyn/overlays/public_api"
+      ],
+      "@ansyn/context": [
+        "src/app/@ansyn/context/public_api"
+      ],
+      "@ansyn/menu": [
+        "src/app/@ansyn/menu/public_api"
+      ],
+      "@ansyn/status-bar": [
+        "src/app/@ansyn/status-bar/public_api"
+      ]
+    }
   }
 }
