--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ansyn-src",
-  "version": "0.2.81.7",
+  "version": "0.2.81.8",
   "private": true,
   "license": "MIT",
   "repository": {
@@ -40,7 +40,7 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
-    "@ansyn/event-drops": "^1.0.2",
+    "@ansyn/event-drops": "0.2.81.7",
     "@ngrx/core": "^1.2.0",
     "@ngrx/effects": "^6.0.1",
     "@ngrx/entity": "^6.0.1",
