--- a/src/app/@ansyn/context/tsconfig.json
+++ b/src/app/@ansyn/context/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "paths": {
       "@ansyn/core": [
-        "src/app/@ansyn/core"
+        "src/app/@ansyn/core/public_api"
       ]
     }
   }
