--- a/src/app/@ansyn/map-facade/tsconfig.json
+++ b/src/app/@ansyn/map-facade/tsconfig.json
@@ -4,13 +4,13 @@
     "module": "commonjs",
     "paths": {
       "@ansyn/core": [
-        "src/app/@ansyn/core"
+        "src/app/@ansyn/core/public_api"
       ],
       "@ansyn/imagery": [
-        "src/app/@ansyn/imagery"
+        "src/app/@ansyn/imagery/public_api"
       ],
       "@ansyn/menu": [
-        "src/app/@ansyn/menu"
+        "src/app/@ansyn/menu/public_api"
       ]
     },
     "target": "es5",
