--- a/src/app/@ansyn/plugins/tsconfig.json
+++ b/src/app/@ansyn/plugins/tsconfig.json
@@ -3,22 +3,22 @@
   "compilerOptions": {
     "paths": {
       "@ansyn/core": [
-        "src/app/@ansyn/core"
+        "src/app/@ansyn/core/public_api"
       ],
       "@ansyn/imagery": [
-        "src/app/@ansyn/imagery"
+        "src/app/@ansyn/imagery/public_api"
       ],
       "@ansyn/map-facade": [
-        "src/app/@ansyn/map-facade"
+        "src/app/@ansyn/map-facade/public_api"
       ],
       "@ansyn/menu-items": [
-        "src/app/@ansyn/menu-items"
+        "src/app/@ansyn/menu-items/public_api"
       ],
       "@ansyn/status-bar": [
-        "src/app/@ansyn/status-bar"
+        "src/app/@ansyn/status-bar/public_api"
       ],
       "@ansyn/context": [
-        "src/app/@ansyn/context"
+        "src/app/@ansyn/context/public_api"
       ]
     }
   }
