--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,34 +4,34 @@
     "baseUrl": "./",
     "paths": {
       "@ansyn/ansyn": [
-        "src/app/@ansyn/ansyn"
+        "src/app/@ansyn/ansyn/public_api"
       ],
       "@ansyn/core": [
-        "src/app/@ansyn/core"
+        "src/app/@ansyn/core/public_api"
       ],
       "@ansyn/imagery": [
-        "src/app/@ansyn/imagery"
+        "src/app/@ansyn/imagery/public_api"
       ],
       "@ansyn/menu-items": [
-        "src/app/@ansyn/menu-items"
+        "src/app/@ansyn/menu-items/public_api"
       ],
       "@ansyn/map-facade": [
-        "src/app/@ansyn/map-facade"
+        "src/app/@ansyn/map-facade/public_api"
       ],
       "@ansyn/plugins": [
-        "src/app/@ansyn/plugins"
+        "src/app/@ansyn/plugins/public_api"
       ],
       "@ansyn/overlays": [
-        "src/app/@ansyn/overlays"
+        "src/app/@ansyn/overlays/public_api"
       ],
       "@ansyn/context": [
-        "src/app/@ansyn/context"
+        "src/app/@ansyn/context/public_api"
       ],
       "@ansyn/menu": [
-        "src/app/@ansyn/menu"
+        "src/app/@ansyn/menu/public_api"
       ],
       "@ansyn/status-bar": [
-        "src/app/@ansyn/status-bar"
+        "src/app/@ansyn/status-bar/public_api"
       ],
       "@builder/*": [
         "src/app/builder/*"
