--- a/src/app/@ansyn/plugins/tsconfig.json
+++ b/src/app/@ansyn/plugins/tsconfig.json
@@ -19,6 +19,9 @@
       ],
       "@ansyn/context": [
         "src/app/@ansyn/context/public_api"
+      ],
+      "@ansyn/overlays": [
+        "src/app/@ansyn/overlays/public_api"
       ]
     }
   }
