--- a/package.json
+++ b/package.json
@@ -69,12 +69,11 @@
     "ngx-bootstrap": "^2.0.4",
     "ngx-treeview": "^2.0.6",
     "ol": "4.6.3",
-    "primeng": "4.1.3",
+    "primeng": "^6.1.4",
     "proj4": "2.4.3",
     "reselect": "3.0.0",
     "rison": "0.1.1",
     "rxjs": "^6.2.1",
-    "rxjs-compat": "^6.2.1",
     "togeojson": "^0.16.0",
     "tokml": "^0.4.0",
     "wellknown": "0.5.0",
