--- a/src/app/@ansyn/ansyn/package.json
+++ b/src/app/@ansyn/ansyn/package.json
@@ -45,7 +45,7 @@
 		"ngx-bootstrap": "^2.0.4",
 		"ngx-treeview": "^2.0.6",
 		"ol": "4.6.3",
-		"primeng": "4.1.3",
+		"primeng": "^6.1.4",
 		"proj4": "2.4.3",
 		"reselect": "3.0.0",
 		"rison": "0.1.1",
