put all deps in all packages

--- a/.travis.yml
+++ b/.travis.yml
@@ -56,5 +56,11 @@ deploy:
     on:
       tags: true
 
+  - provider: script
+		script: npm run publish:libs
+		skip_cleanup: true
+		on:
+			tags: true
+
 notifications:
   email: false
