--- a/src/app/@ansyn/context/package.json
+++ b/src/app/@ansyn/context/package.json
@@ -3,8 +3,13 @@
 	"version": "0.2.82",
 	"peerDependencies": {
 		"@angular/common": "^6.0.3",
-		"@angular/core": "^6.0.3",
-		"@ansyn/core": "0.2.82"
+		"@angular/core": "^6.0.3"
+	},
+	"dependencies": {
+		"@ngrx/core": "^1.2.0",
+		"@ngrx/store": "^6.0.1",
+		"@ansyn/core": "0.2.82",
+		"@ngrx/entity": "^6.0.1"
 	},
 	"license": "MIT"
 }
