--- a/src/app/@ansyn/menu/package.json
+++ b/src/app/@ansyn/menu/package.json
@@ -5,5 +5,11 @@
 		"@angular/common": "^6.0.3",
 		"@angular/core": "^6.0.3"
 	},
+	"dependencies": {
+		"@ngrx/core": "^1.2.0",
+		"@ngrx/store": "^6.0.1",
+		"@ngrx/entity": "^6.0.1",
+		"auto-subscriptions": "^1.0.3"
+	},
 	"license": "MIT"
 }
