--- a/src/app/@ansyn/plugins/package.json
+++ b/src/app/@ansyn/plugins/package.json
@@ -5,5 +5,21 @@
 		"@angular/common": "^6.0.3",
 		"@angular/core": "^6.0.3"
 	},
+	"dependencies": {
+		"@ngrx/core": "^1.2.0",
+		"@ngrx/store": "^6.0.1",
+		"@ngrx/effects": "^6.0.1",
+		"@turf/turf": "5.1.6",
+		"lodash": "4.17.5",
+		"ol": "4.6.3",
+		"@ansyn/status-bar": "0.2.82",
+		"@ansyn/overlays": "0.2.82",
+		"@ansyn/menu-items": "0.2.82",
+		"@ansyn/map-facade": "0.2.82",
+		"@ansyn/imagery": "0.2.82",
+		"@ansyn/context": "0.2.82",
+		"angular2-uuid": "1.1.1",
+		"auto-subscriptions": "^1.0.3"
+	},
 	"license": "MIT"
 }
