build(): organize all ng-packagr.json files

--- a/src/app/@ansyn/ansyn/package.json
+++ b/src/app/@ansyn/ansyn/package.json
@@ -4,7 +4,8 @@
 	"peerDependencies": {
 		"rxjs-compat": "^6.2.1",
 		"@angular/common": "^6.0.3",
-		"@angular/core": "^6.0.3"
+		"@angular/core": "^6.0.3",
+		"@ansyn/assets": "0.2.82"
 	},
 	"dependencies": {
 		"@ansyn/context": "0.2.82",
