--- a/src/app/@ansyn/menu-items/package.json
+++ b/src/app/@ansyn/menu-items/package.json
@@ -6,6 +6,7 @@
 		"@angular/core": "^6.0.3"
 	},
 	"dependencies": {
+		"@ansyn/core": "0.2.82",
 		"@ngrx/core": "^1.2.0",
 		"@ngrx/store": "^6.0.1",
 		"@ngrx/effects": "^6.0.1",
