--- a/src/app/@ansyn/imagery/package.json
+++ b/src/app/@ansyn/imagery/package.json
@@ -1,12 +1,16 @@
 {
 	"name": "@ansyn/imagery",
-	"version": "0.2.82",
+	"version": "0.2.82.2",
 	"keywords": [],
 	"author": "ansyn",
 	"license": "MIT",
 	"peerDependencies": {
 		"@angular/common": "^6.0.3",
 		"@angular/core": "^6.0.3",
-		"@ansyn/core": "0.2.82"
+		"@ansyn/core": "0.2.82.2"
+	},
+	"dependencies": {
+		"@ansyn/core": "0.2.82.2",
+		"auto-subscriptions": "^1.0.3"
 	}
 }
