--- a/src/app/@ansyn/menu-items/package.json
+++ b/src/app/@ansyn/menu-items/package.json
@@ -1,9 +1,33 @@
 {
 	"name": "@ansyn/menu-items",
-	"version": "0.2.82",
+	"version": "0.2.82.2",
 	"peerDependencies": {
 		"@angular/common": "^6.0.3",
 		"@angular/core": "^6.0.3"
+	},
+	"dependencies": {
+		"@ansyn/core": "0.2.82.2",
+		"@ngrx/core": "^1.2.0",
+		"@ngrx/store": "^6.0.1",
+		"@ngrx/effects": "^6.0.1",
+		"@turf/turf": "5.1.6",
+		"lodash": "4.17.5",
+		"moment": "^2.21.0",
+		"wellknown": "0.5.0",
+		"@ansyn/menu": "0.2.82.2",
+		"@ansyn/context": "0.2.82.2",
+		"@ngrx/entity": "^6.0.1",
+		"@ngx-translate/core": "^10.0.2",
+		"angular2-uuid": "1.1.1",
+		"auto-subscriptions": "^1.0.3",
+		"file-saver": "^1.3.8",
+		"ng-infinitescroll": "1.0.12",
+		"ngx-bootstrap": "^2.0.4",
+		"primeng": "^6.1.4",
+		"proj4": "2.4.3",
+		"rison": "0.1.1",
+		"togeojson": "^0.16.0",
+		"tokml": "^0.4.0"
 	},
 	"license": "MIT"
 }
