--- a/src/app/@ansyn/menu/package.json
+++ b/src/app/@ansyn/menu/package.json
@@ -1,9 +1,15 @@
 {
 	"name": "@ansyn/menu",
-	"version": "0.2.82",
+	"version": "0.2.82.2",
 	"peerDependencies": {
 		"@angular/common": "^6.0.3",
 		"@angular/core": "^6.0.3"
+	},
+	"dependencies": {
+		"@ngrx/core": "^1.2.0",
+		"@ngrx/store": "^6.0.1",
+		"@ngrx/entity": "^6.0.1",
+		"auto-subscriptions": "^1.0.3"
 	},
 	"license": "MIT"
 }
