fix: revert layer manager

--- a/confd/conf.d/production.toml
+++ b/confd/conf.d/production.toml
@@ -20,5 +20,6 @@ keys = [
 	"/ansyn/overlay/open/aerial/inactive",
 	"/ansyn/overlay/planet/inactive",
 	"/ansyn/overlay/idaho/inactive",
-    "/ansyn/imisight/callback/url"
+	"/ansyn/imisight/callback/url",
+	"/ansyn/overlay/imisight/inactive"
 ]
