--- a/confd/conf.d/production.toml
+++ b/confd/conf.d/production.toml
@@ -16,5 +16,7 @@ keys = [
     "/ansyn/tools/displayid",
 	"/ansyn/overlay/open/aerial/inactive",
 	"/ansyn/overlay/planet/inactive",
-	"/ansyn/overlay/idaho/inactive"
+	"/ansyn/overlay/idaho/inactive",
+	"/ansyn/imisight/callback/url",
+	"/ansyn/overlay/imisight/inactive"
 ]
