--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
     "@ansyn/event-drops": "0.2.81.7",
+    "@auth0/angular-jwt": "^2.0.0",
     "@ngrx/core": "^1.2.0",
     "@ngrx/effects": "^6.0.1",
     "@ngrx/entity": "^6.0.1",
@@ -49,6 +50,8 @@
     "@ngx-translate/core": "^10.0.2",
     "@turf/turf": "5.1.6",
     "angular2-uuid": "1.1.1",
+    "auth0-js": "^9.7.3",
+    "auth0-lock": "^11.8.1",
     "auto-subscriptions": "^1.0.3",
     "core-js": "^2.5.4",
     "crypto-js": "3.1.9-1",
@@ -83,6 +86,7 @@
     "typescript": "~2.7.2",
     "@angular/cli": "~6.0.8",
     "@angular/language-service": "^6.0.3",
+    "@types/auth0-js": "^8.11.5",
     "@types/d3": "^4.13.0",
     "@types/file-saver": "^1.3.0",
     "@types/geojson": "7946.0.3",
