--- a/src/app/@ansyn/ansyn/package.json
+++ b/src/app/@ansyn/ansyn/package.json
@@ -17,10 +17,12 @@
 		"@ansyn/overlays": "0.2.82.4",
 		"@ansyn/plugins": "0.2.82.4",
 		"@ansyn/status-bar": "0.2.82.4",
+		"@auth0/angular-jwt": "^2.0.0",
 		"@ngrx/core": "^1.2.0",
 		"@ngrx/store": "^6.0.1",
 		"@ngrx/effects": "^6.0.1",
 		"@turf/turf": "5.1.6",
+		"auth0-js": "^9.7.3",
 		"geojson": "^0.5.0",
 		"lodash": "4.17.5",
 		"moment": "^2.21.0",
