add auth0 deps for ansyn / ansyn (#1872)
* add auth0 deps for ansyn / ansyn

* bomb version

--- a/src/app/@ansyn/ansyn/package.json
+++ b/src/app/@ansyn/ansyn/package.json
@@ -1,26 +1,28 @@
 {
 	"name": "@ansyn/ansyn",
-	"version": "0.2.82.4",
+	"version": "0.2.82.5",
 	"peerDependencies": {
 		"rxjs-compat": "^6.2.1",
 		"@angular/common": "^6.0.3",
 		"@angular/core": "^6.0.3",
-		"@ansyn/assets": "0.2.82.4"
+		"@ansyn/assets": "0.2.82.5"
 	},
 	"dependencies": {
-		"@ansyn/context": "0.2.82.4",
-		"@ansyn/core": "0.2.82.4",
-		"@ansyn/imagery": "0.2.82.4",
-		"@ansyn/map-facade": "0.2.82.4",
-		"@ansyn/menu": "0.2.82.4",
-		"@ansyn/menu-items": "0.2.82.4",
-		"@ansyn/overlays": "0.2.82.4",
-		"@ansyn/plugins": "0.2.82.4",
-		"@ansyn/status-bar": "0.2.82.4",
+		"@ansyn/context": "0.2.82.5",
+		"@ansyn/core": "0.2.82.5",
+		"@ansyn/imagery": "0.2.82.5",
+		"@ansyn/map-facade": "0.2.82.5",
+		"@ansyn/menu": "0.2.82.5",
+		"@ansyn/menu-items": "0.2.82.5",
+		"@ansyn/overlays": "0.2.82.5",
+		"@ansyn/plugins": "0.2.82.5",
+		"@ansyn/status-bar": "0.2.82.5",
+		"@auth0/angular-jwt": "^2.0.0",
 		"@ngrx/core": "^1.2.0",
 		"@ngrx/store": "^6.0.1",
 		"@ngrx/effects": "^6.0.1",
 		"@turf/turf": "5.1.6",
+		"auth0-js": "^9.7.3",
 		"geojson": "^0.5.0",
 		"lodash": "4.17.5",
 		"moment": "^2.21.0",
