--- a/src/app/@ansyn/menu-items/package.json
+++ b/src/app/@ansyn/menu-items/package.json
@@ -7,6 +7,7 @@
 	},
 	"dependencies": {
 		"@ansyn/core": "0.2.82.3",
+		"@ansyn/overlays": "0.2.82.3",
 		"@ngrx/core": "^1.2.0",
 		"@ngrx/store": "^6.0.1",
 		"@ngrx/effects": "^6.0.1",
