build-libs fixes

--- a/src/app/@ansyn/menu-items/tsconfig.json
+++ b/src/app/@ansyn/menu-items/tsconfig.json
@@ -10,6 +10,12 @@
       ],
       "@ansyn/menu": [
         "src/app/@ansyn/menu/public_api"
+      ],
+      "@ansyn/imagery": [
+        "src/app/@ansyn/imagery/public_api"
+      ],
+      "@ansyn/map-facade": [
+        "src/app/@ansyn/map-facade/public_api"
       ]
     }
   }
