--- a/src/app/@ansyn/menu-items/tsconfig.lib.json
+++ b/src/app/@ansyn/menu-items/tsconfig.lib.json
@@ -10,6 +10,12 @@
       ],
       "@ansyn/context": [
         "dist/ansyn/context"
+      ],
+      "@ansyn/imagery": [
+        "dist/ansyn/imagery"
+      ],
+      "@ansyn/map-facade": [
+        "dist/ansyn/map-facade"
       ]
     },
     "outDir": "../../../out-tsc/lib",
