1902 create task form (#1908)
* Adding some initial components for alg. tasks

* Adding basic navigation between tasks pages, based on "output" events

* 1 buttons locations tweaks
2 adding tasks-form stub

* tasks form (cont.)

* tasks form (cont.) (combo-box fix: selection UI should not be dependent on the binding)

* tasks form (cont.)

* tasks form (cont.) (combo box new usage)

* tasks form (cont.)
+ tests now pass
+ another attempt to use ansyn-input ... still not nice

* tasks form (cont.)
+ ansyn-input ... now nice!

* 1 ansyn-radio tweaks
2 adding a <form>

* 1 Adding algorithmsConfig section in config file
2 Adding AlgorithmsService that provides the config

* Taking algorithms name + types from config

* Tweaks

* Tweaks

* 1 Take sensor name and time estimation from config
2 Calculate time estimation

* Some code to show and/or clear error message

* Hide alg name + pass it through translation

* Hide alg name + pass it through translation (cont.)

* Get relevant overlays (for now, just favorite overlays)

* Error checking: number of overlays

* Get active overlay. Show error if missing.

* Some unit tests

* Tweaks

* Algorithms store: setting some actions

* Adding reducer for algorithms

* tweaks

* Adding visualizer: AlgorithmTaskRegionVisualizer

* AlgorithmTaskRegionVisualizer (cont.)

* form: implementing select location

* Adding an injectable algorithm task run service

* Fixed unit test!

* build-libs fixes

* CR fixes

* CR fixes - unit tests

* CR fixes - filter by sensor names

* CR fixes - draw rectangle

* CR fixes - draw rectangle

--- a/src/app/@ansyn/menu-items/package.json
+++ b/src/app/@ansyn/menu-items/package.json
@@ -16,6 +16,7 @@
 		"wellknown": "0.5.0",
 		"@ansyn/menu": "0.2.82.9",
 		"@ansyn/context": "0.2.82.9",
+		"@ansyn/map-facade": "0.2.82.9",
 		"@ngrx/entity": "^6.0.1",
 		"@ngx-translate/core": "^10.0.2",
 		"angular2-uuid": "1.1.1",
