--- a/confd/conf.d/production.toml
+++ b/confd/conf.d/production.toml
@@ -18,5 +18,6 @@ keys = [
 	"/ansyn/overlay/planet/inactive",
 	"/ansyn/overlay/idaho/inactive",
 	"/ansyn/imisight/callback/url",
-	"/ansyn/overlay/imisight/inactive"
+	"/ansyn/overlay/imisight/inactive",
+	"/ansyn/overlay/tb/inactive"
 ]
