--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "ng-infinitescroll": "1.0.12",
     "ngx-bootstrap": "^2.0.4",
     "ngx-treeview": "^2.0.6",
-    "ol": "4.6.3",
+    "ol": "^5.3.0",
     "primeng": "^6.1.4",
     "proj4": "2.4.3",
     "rison": "0.1.1",
@@ -76,14 +76,10 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^6.0.3",
-    "@angular-devkit/build-ng-packagr": "~0.6.8",
     "@angular-devkit/build-angular": "~0.6.8",
-    "ng-packagr": "^3.0.0-rc.2",
-    "tsickle": ">=0.25.5",
-    "tslib": "^1.7.1",
-    "typescript": "~2.7.2",
+    "@angular-devkit/build-ng-packagr": "~0.6.8",
     "@angular/cli": "~6.0.8",
+    "@angular/compiler-cli": "^6.0.3",
     "@angular/language-service": "^6.0.3",
     "@types/auth0-js": "^8.11.5",
     "@types/d3": "^4.13.0",
@@ -93,8 +89,6 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/lodash": "4.14.88",
     "@types/node": "~8.9.4",
-    "@types/ol": "^4.6.1",
-    "@types/openlayers": "^4.6.2",
     "@types/rison": "0.0.6",
     "@types/wellknown": "0.5.0",
     "codelyzer": "~4.2.1",
@@ -121,12 +115,16 @@
     "karma-coverage-istanbul-reporter": "~2.0.0",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "ng-packagr": "^3.0.0-rc.2",
     "pre-commit": "1.2.2",
     "protractor": "~5.3.0",
     "protractor-screenshoter-plugin": "^0.5.0",
     "replace": "0.3.0",
     "ts-node": "~5.0.1",
-    "tslint": "~5.9.1"
+    "tsickle": ">=0.25.5",
+    "tslib": "^1.7.1",
+    "tslint": "~5.9.1",
+    "typescript": "~2.7.2"
   },
   "precommit": [
     "fix-all"
